<resources>
    <string name="app_name">Cognizance19</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cognizance">COGNIZANCE</string>
    <string name="presents">presents</string>
    <string name="unwinding_chaos">UNWINDING CHAOS</string>
    <string name="login">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="or">OR</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="reenter_new_pw">Re-Enter New Password</string>
    <string name="save_continue">SAVE &amp; CONTINUE</string>
    <string name="recover_account">Recover your account</string>
    <string name="enter_id">Enter email, cogni ID or phone number </string>
    <string name="next">NEXT</string>
    <string name="email_id">Email ID</string>
    <string name="pw">Password</string>
    <string name="cont">CONTINUE</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_fb">LOG IN WITH FACEBOOK</string>
    <string name="login_google">LOG IN WITH GOOGLE</string>
    <string name="complete_your_profile">COMPLETE YOUR PROFILE</string>
    <string name="Full_Name">Full Name</string>
    <string-array name="Select_State">
        <item>Andaman and Nicobar Islands</item>
        <item>Arunachal Pradesh</item>
        <item>Andhra Pradesh &amp; Telangana</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="Select_City">
        <item>Select City</item>
    </string-array>
    <string-array name="Select_College">
        <item>Select College</item>
    </string-array>
    <string name="Room_No_Hostel">Room No, Hostel</string>
    <string name="Contact_No">Contact No.</string>
    <string name="signed_up_with_SPP">I signed up with SPP</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="cogni_id">Cogni ID</string>
    <string name="Mobile_No">Mobile No.</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="workshops">Workshops</string>
    <string name="spotlight">Spotlight</string>
    <string name="more">More</string>
    <string name="statistics">Statistics</string>
    <string name="users_referred">Users Referred</string>
    <string name="referal_score">Score</string>
    <string name="completed">Completed</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="instruction_for_excel_file">Instruction for Excel File</string>
    <string name="excel_instruction">Store all contacts in one workbook in the excel file under the column names “Names” and “Contact Details”. Store in formats .xls or .xlsx</string>
    <string name="choose_a_file_to_upload">Choose a file to upload</string>
    <string name="upload">Upload</string>
    <string name="upload_excel_file">Upload excel file</string>
    <string name="signup_participant">Sign Up as Participant</string>
    <string name="signup_spp">Sign Up as SPP</string>
    <string name="cancel">CANCEL</string>
    <string name="techtainment">TECHTAINMENT</string>
    <string name="guest_speaker">GUEST SPEAKER</string>
    <string name="last_year_highlight">Last year\'s Highlights</string>
    <string name="logout">Logout</string>
    <string name="register_and_pay">Register and pay</string>
    <string name="introduction">Introduction</string>
    <string name="dummy_data">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="registration_procedure">Registration Procedure</string>
    <string name="rules">Rules</string>
    <string name="unregister">Unregister</string>
    <string name="manage_team">Manage Team</string>
    <string name="problem_statement">Problem Statement</string>
    <string name="contact_details">Contact Details</string>
    <string name="add_team_members">Add Team Members</string>
    <string name="add_more_members">+ Add More Members</string>
    <string name="save">SAVE</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="spotlights">Spotlights</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="exhibitions">EXHIBITIONS</string>
    <string name="panel_discussion">Panel Discussion</string>
    <string name="dept_name">Dept. Name</string>
    <string name="facebook_app_id">1271501773006886</string>
    <string name="fb_login_protocol_scheme">fb1271501773006886</string>
    <string name="view_problem_statement">View Problem Statement</string>
    <string name="update">update</string>
    <string name="dashboard">Dashboard</string>
    <string name="spp_dashboard">SPP Dashboard</string>
    <string name="gender">Gender</string>
    <string name="pincode">Pincode</string>
    <string name="year">Year</string>
    <string name="branch">Branch</string>
    <string name="submit_abstract">Submit abstract</string>
    <string name="enter_referral_code">Enter Referral Code</string>
    <string name="attractions">Attractions</string>
    <string name="what_s_new">What\'s New</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="add_member">+ Add Member</string>
    <string name="only_the_team_leader_can_add_members">Only the team leader can add members</string>
    <string name="about">About</string>
    <string name="content">Content</string>
    <string name="benefits">Benefits</string>
    <string name="can_t_add_more_members">Can\'t add more members</string>
    <string name="complete_address">Complete Address</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="don_t_have_any">Don\'t have any</string>
    <string name="schedule">Schedule</string>
    <string-array name="andaman_city">
        <item>Alipur </item>
        <item>Andaman Island </item>
        <item>Anderson Island </item>
        <item>Arainj-Laka-Punga </item>
        <item>Austinabad </item>
        <item>Bamboo Flat </item>
        <item>Barren Island </item>
        <item>Beadonabad </item>
        <item>Betapur </item>
        <item>Bindraban </item>
        <item>Bonington </item>
        <item>Brookesabad </item>
        <item>Cadell Point </item>
        <item>Calicut </item>
        <item>Chetamale </item>
        <item>Cinque Islands </item>
        <item>Defence Island </item>
        <item>Digilpur </item>
        <item>Dolyganj </item>
        <item>Flat Island </item>
        <item>Geinyale </item>
        <item>Great Coco Island </item>
        <item>Haddo </item>
        <item>Havelock Island </item>
        <item>Henry Lawrence Island </item>
        <item>Herbertabad </item>
        <item>Hobdaypur </item>
        <item>Ilichar </item>
        <item>Ingoie </item>
        <item>Inteview Island </item>
        <item>Jangli Ghat </item>
        <item>Jhon Lawrence Island </item>
        <item>Karen </item>
        <item>Kartara </item>
        <item>KYD Islannd </item>
        <item>Landfall Island </item>
        <item>Little Andmand </item>
        <item>Little Coco Island </item>
        <item>Long Island </item>
        <item>Maimyo </item>
        <item>Malappuram </item>
        <item>Manglutan </item>
        <item>Manpur </item>
        <item>Mitha Khari </item>
        <item>Neill Island </item>
        <item>Nicobar Island </item>
        <item>North Brother Island </item>
        <item>North Passage Island </item>
        <item>North Sentinel Island </item>
        <item>Nothen Reef Island </item>
        <item>Outram Island </item>
        <item>Pahlagaon </item>
        <item>Palalankwe </item>
        <item>Passage Island </item>
        <item>Phaiapong </item>
        <item>Phoenix Island </item>
        <item>Port Blair </item>
        <item>Preparis Island </item>
        <item>Protheroepur </item>
        <item>Rangachang </item>
        <item>Rongat </item>
        <item>Rutland Island </item>
        <item>Sabari </item>
        <item>Saddle Peak </item>
        <item>Shadipur </item>
        <item>Smith Island </item>
        <item>Sound Island </item>
        <item>South Sentinel Island </item>
        <item>Spike Island </item>
        <item>Tarmugli Island </item>
        <item>Taylerabad </item>
        <item>Titaije </item>
        <item>Toibalawe </item>
        <item>Tusonabad </item>
        <item>West Island </item>
        <item>Wimberleyganj </item>
        <item>Yadita </item>
    </string-array>
</resources>