<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signup_as_participant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_bg"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingTop="4dp"
        android:paddingEnd="64dp"
        android:paddingBottom="9dp"
        android:text="@string/signup_participant"
        android:textColor="#464646"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/or"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/signup_as_spp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_bg"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingTop="4dp"
        android:paddingEnd="64dp"
        android:paddingBottom="9dp"
        android:text="@string/signup_spp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#464646"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="33dp"
            android:layout_weight="1"
            android:background="@drawable/gray_button_bg"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/next_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="33dp"
            android:layout_weight="1"
            android:background="@drawable/green_button_bg"
            android:enabled="false"
            android:text="@string/next"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>